# markdown-parser

./: .rustfmt.toml  Cargo.toml  LICENSE
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: main.ts
app/src/scripts/: index.ts  parse-markdown.ts  types.d.ts
app/src/styles/: main.css
pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
src/: lib.rs  parser.rs  utils.rs
