[package]
  name = "markdown-parser"
  version = "0.1.0"
  edition = "2021"
  authors = ["princemuel <vansomecsam@gmail.com>"]
  description = "Yet another calculator webapp built with Rust and Web Assembly"
  repository = "https://github.com/princemuel/markown-parser"
  license = "MIT"
  publish = false

[lib]
  crate-type = ["cdylib", "rlib"]

[features]
  default = ["console_error_panic_hook"]

[dependencies]
  wasm-bindgen = "0.2"

  # The `console_error_panic_hook` crate provides better debugging of panics by
  # logging them with `console.error`. This is great for development, but requires
  # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
  # code size when deploying.
  console_error_panic_hook = { version = "0.1", optional = true }
  cfg-if = "1.0"
  web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
  wasm-bindgen-test = "0.3"
